--- a/luffy/src/main/resources/setup.htm
+++ b/luffy/src/main/resources/setup.htm
@@ -2,8 +2,8 @@
 <html class="frm20">
 <head>
     <title>安装</title>
-    <script src="//cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
-    <script src="//cdn.bootcss.com/layer/2.3/layer.js"></script>
+    <script src="/libs/jquery.min.js"></script>
+    <script src="//mirror.noear.org/libs/layer/3.1.1/layer.js"></script>
     <style>
         * { margin: 0px; padding: 0px; font-size: 14px;}
         html { background-color: #fff; overflow: hidden; -webkit-overflow-scrolling:touch;}
