--- a/luffy/src/main/resources/setup.htm
+++ b/luffy/src/main/resources/setup.htm
@@ -2,7 +2,7 @@
 <html class="frm20">
 <head>
     <title>安装</title>
-    <script src="/libs/jquery.min.js"></script>
+    <script src="//mirror.noear.org/lib/jquery-3.4.1.min.js"></script>
     <script src="//mirror.noear.org/libs/layer/3.1.1/layer.js"></script>
     <style>
         * { margin: 0px; padding: 0px; font-size: 14px;}
